# playground

awesome/: rc.lua
awesome/themes/default/: theme.lua
clientserver/: CMakeLists.txt
clientserver/client/: CMakeLists.txt  main.c
clientserver/server/: CMakeLists.txt  main.c
luampd/: CMakeLists.txt  luampd.c
mybar/: CMakeLists.txt  draw.c  draw.cpp  draw.h  input.c  input.cpp  input.h  mybar.c  mybar.cpp
remotejoy/: audiocapture.cpp  audiocapture.h  imagereader.cpp  imagereader.h  main.cpp  remotejoy.cpp  remotejoy.h  remotejoy.pro
zsh/: zshrc
