PROJECT(luampd)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(LUA REQUIRED lua)
PKG_CHECK_MODULES(LIBMPD REQUIRED libmpd)

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIRS} ${LIBMPD_INCLUDE_DIRS})

SET(LuaMpdSources luampd.c)

ADD_LIBRARY(luampd MODULE ${LuaMpdSources})

TARGET_LINK_LIBRARIES(luampd ${LUA_LIBRARIES} ${LIBMPD_LIBRARIES})

SET_TARGET_PROPERTIES(luampd PROPERTIES PREFIX "")

INSTALL(TARGETS luampd DESTINATION lib/lua/5.1)

