PROJECT(mybar)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(XCB REQUIRED xcb)
PKG_CHECK_MODULES(XCB-ATOM REQUIRED xcb-atom)
PKG_CHECK_MODULES(XCB-IMAGE REQUIRED xcb-image)

INCLUDE_DIRECTORIES(${XCB_INCLUDE_DIRS} ${XCB-ATOM_INCLUDE_DIRS}
    ${XCB-IMAGE_INCLUDE_DIRS}) 

SET(MyBarSources mybar.cpp draw.cpp input.cpp)

ADD_EXECUTABLE(mybar ${MyBarSources})

TARGET_LINK_LIBRARIES(mybar ${XCB_LIBRARIES} ${XCB-ATOM_LIBRARIES}
    ${XCB-IMAGE_LIBRARIES} pthread)

INSTALL(TARGETS mybar DESTINATION bin)

